added function to call the api to retrieve data and display in html

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <div class="card">
                     <div class="card-body">
                         <h2 class="card-title m-0" id="city">Search for a City</h2>
-                        <img src="" alt="Weather Icon" id="curWtherIcon"/>
+                        <img src="" alt="Weather Icon" id="currweatherIcon"/>
                         <h6 class="card-subtitle mb-2 text-muted" id="curDNT">Date: </h6>
                         <p class="card-text" id="curTemp">Tempurature: </p>
                         <p class="card-text" id="curHum">Humidity: </p>
