--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
     <div class="row">
 
         <!-- Search Bar -->
-        <div class="col-md-4 bg-light pb-3">
+        <div class="col-md-4 bg-dark pb-3">
 
-            <div class="input-group my-3">
+            <div class="input-group bg-dark my-3">
                 <input type="text" class="form-control" placeholder="Search for a City" id="citySearch">
                 <div class="input-group-append">
                     <button class="btn btn-outline-secondary" type="submit" id="searchBtn">Search</button>
@@ -54,7 +54,7 @@
             <div class="mb-2" id="spacer"></div> 
 
             <div class="row mx-2">
-                <h3 class="ml-3">5-Day Forcast:</h3>
+                <h3 class="ml-3 center">5-Day Forcast:</h3>
             </div>
 
             <div class="row mx-2" id="forcast">
