--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                         <h2 class="card-title m-0" id="city">Search for a City</h2>
                         <img src="" alt="Weather Icon" id="currweatherIcon"/>
                         <h6 class="card-subtitle mb-2 text-muted" id="curDNT">Date: </h6>
-                        <p class="card-text" id="curTemp">Tempurature: </p>
+                        <p class="card-text" id="curTemp">Temperature: </p>
                         <p class="card-text" id="curHum">Humidity: </p>
                         <p class="card-text" id="curWind">Wind Speed: </p>
                         <p class="card-text" id="curUVIndex">UV Index:</p>
@@ -54,7 +54,7 @@
             <div class="mb-2" id="spacer"></div> 
 
             <div class="row mx-2">
-                <h3 class="ml-3 center">5-Day Forcast:</h3>
+                <h3 class="ml-3">5-Day Forcast:</h3>
             </div>
 
             <div class="row mx-2" id="forcast">
